# paprika2notion

./: .travis.yml  LICENSE  README.md  pyproject.toml  pytest.ini
paprika2notion/: __init__.py  enums.py  recipe.py
paprika2notion/scripts/: write_to_notion.py
tests/: test_recipes.py
tests/fixtures/: example.paprikarecipe.yaml
